--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,11 @@ services:
     image: mrmi-backend:latest
     ports:
       - "8009:8009"
+    environment:
+      DB_URL: ${DB_URL}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
     command: >
       sh -c "python manage.py collectstatic --noinput &&
              python manage.py migrate &&
